--- a/app/src/main/res/layout/activity_game_view.xml
+++ b/app/src/main/res/layout/activity_game_view.xml
@@ -3,13 +3,15 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#0099cc"
-             tools:context="drew.harker.splendorapp.view.GameView">
+             tools:context="drew.harker.splendorapp.view.GameView"
+             android:id="@+id/it">
 
     <LinearLayout
         android:id="@+id/game_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_horizontal|center_vertical">
 
         <!-- Nobles List (3 to 5)-->
         <LinearLayout
