--- a/app/src/main/res/layout/noble.xml
+++ b/app/src/main/res/layout/noble.xml
@@ -6,9 +6,43 @@
               android:layout_margin="@dimen/card_margin"
               android:background="@drawable/card"
               android:gravity="center_horizontal">
+    <TextView
+        android:id="@+id/points"
+        android:padding="3dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:textSize="@dimen/bank_text"
+        android:text="0"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:text="0">
 
+        <TextView
+            android:layout_width="@dimen/card_icon_size"
+            android:layout_height="@dimen/card_icon_size"
+            style="@style/border_text"
+            android:background="@drawable/emerald_square"
+            android:text="0"/>
 
+        <View
+            android:layout_width="3dp"
+            android:layout_height="3dp"/>
+
+        <TextView
+            android:layout_width="@dimen/card_icon_size"
+            android:layout_height="@dimen/card_icon_size"
+            style="@style/border_text"
+            android:background="@drawable/onyx_square"
+            android:text="0"/>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
