Finished the Game Board View. I still need to add a button for view the other player's information, and for displaying reserved cards. Also, still having sizing issues with other devices

--- a/app/src/main/res/layout/activity_game_view.xml
+++ b/app/src/main/res/layout/activity_game_view.xml
@@ -39,6 +39,8 @@
          android:id="@+id/bank"/>
 
         <!-- Users Cards and Coins and Points -->
+        <include layout="@layout/player_bank"
+         android:id="@+id/player_bank"/>
 
     </LinearLayout>
 
