--- a/app/src/main/res/layout/card_back.xml
+++ b/app/src/main/res/layout/card_back.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical|center_horizontal"
-        android:textSize="30sp"
+        android:textSize="@dimen/xl_text"
         android:text="Fake"/>
 
 </RelativeLayout>
