--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -9,20 +9,20 @@
 
     <View
         android:id="@+id/source"
-        android:layout_width="@dimen/card_icon_size"
-        android:layout_height="@dimen/card_icon_size"
+        android:layout_width="@dimen/small_icon_size"
+        android:layout_height="@dimen/small_icon_size"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/sapphire_circle"/>
 
     <TextView
         android:id="@+id/points"
-        android:padding="3dp"
+        android:paddingLeft="@dimen/card_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:textSize="@dimen/bank_text"
+        android:textSize="@dimen/large_text"
         android:text="0"/>
 
     <LinearLayout
@@ -35,16 +35,18 @@
 
         <TextView
             android:id="@+id/diamondCost"
-            android:layout_width="@dimen/card_icon_size"
-            android:layout_height="@dimen/card_icon_size"
+            android:layout_width="@dimen/small_icon_size"
+            android:layout_height="@dimen/small_icon_size"
+            android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
             android:background="@drawable/diamond_circle"/>
 
         <TextView
             android:id="@+id/sapphireCost"
-            android:layout_width="@dimen/card_icon_size"
-            android:layout_height="@dimen/card_icon_size"
+            android:layout_width="@dimen/small_icon_size"
+            android:layout_height="@dimen/small_icon_size"
+            android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
             android:visibility="gone"
@@ -52,24 +54,27 @@
 
         <TextView
             android:id="@+id/emeraldCost"
-            android:layout_width="@dimen/card_icon_size"
-            android:layout_height="@dimen/card_icon_size"
+            android:layout_width="@dimen/small_icon_size"
+            android:layout_height="@dimen/small_icon_size"
+            android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
             android:background="@drawable/emerald_circle"/>
 
         <TextView
             android:id="@+id/rubyCost"
-            android:layout_width="@dimen/card_icon_size"
-            android:layout_height="@dimen/card_icon_size"
+            android:layout_width="@dimen/small_icon_size"
+            android:layout_height="@dimen/small_icon_size"
+            android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
             android:background="@drawable/ruby_circle"/>
 
         <TextView
             android:id="@+id/onyxCost"
-            android:layout_width="@dimen/card_icon_size"
-            android:layout_height="@dimen/card_icon_size"
+            android:layout_width="@dimen/small_icon_size"
+            android:layout_height="@dimen/small_icon_size"
+            android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
             android:background="@drawable/onyx_circle"/>
