--- a/app/src/main/res/layout/noble.xml
+++ b/app/src/main/res/layout/noble.xml
@@ -8,12 +8,12 @@
               android:gravity="center_horizontal">
     <TextView
         android:id="@+id/points"
-        android:padding="3dp"
+        android:paddingRight="@dimen/card_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:textSize="@dimen/bank_text"
+        android:textSize="@dimen/large_text"
         android:text="0"/>
 
     <LinearLayout
@@ -25,19 +25,33 @@
         android:text="0">
 
         <TextView
-            android:layout_width="@dimen/card_icon_size"
-            android:layout_height="@dimen/card_icon_size"
+            android:layout_width="@dimen/small_icon_size"
+            android:layout_height="@dimen/small_icon_size"
+            android:textSize="@dimen/small_text"
+            style="@style/border_text"
+            android:background="@drawable/sapphire_square"
+            android:text="0"/>
+
+        <View
+            android:layout_width="@dimen/card_margin"
+            android:layout_height="@dimen/card_margin"/>
+
+        <TextView
+            android:layout_width="@dimen/small_icon_size"
+            android:layout_height="@dimen/small_icon_size"
+            android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:background="@drawable/emerald_square"
             android:text="0"/>
 
         <View
-            android:layout_width="3dp"
-            android:layout_height="3dp"/>
+            android:layout_width="@dimen/card_margin"
+            android:layout_height="@dimen/card_margin"/>
 
         <TextView
-            android:layout_width="@dimen/card_icon_size"
-            android:layout_height="@dimen/card_icon_size"
+            android:layout_width="@dimen/small_icon_size"
+            android:layout_height="@dimen/small_icon_size"
+            android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:background="@drawable/onyx_square"
             android:text="0"/>
