Refactored the token value displays to require less files

--- a/app/src/main/res/layout/bank_coins.xml
+++ b/app/src/main/res/layout/bank_coins.xml
@@ -6,84 +6,97 @@
               android:layout_height="match_parent"
               android:padding="@dimen/layout_padding">
 
-    <TextView
+    <drew.harker.splendorapp.view.ValueTokenView
         android:id="@+id/diamondBank"
-        android:layout_width="@dimen/large_icon_size"
-        android:layout_height="@dimen/large_icon_size"
+        android:layout_width="@dimen/large_token_size"
+        android:layout_height="@dimen/large_token_size"
         style="@style/border_text"
         android:textSize="@dimen/large_text"
         android:text="0"
-        android:background="@drawable/diamond_circle"/>
+        android:background="@drawable/circle"
+        custom:coin_color="@color/diamond"
+        custom:always_visible="true"
+        custom:selectable="true"/>
 
     <View
-        android:layout_width="@dimen/large_icon_padding"
-        android:layout_height="@dimen/large_icon_size"/>
+        android:layout_width="@dimen/large_token_padding"
+        android:layout_height="@dimen/large_token_size"/>
 
-    <TextView
+
+    <drew.harker.splendorapp.view.ValueTokenView
         android:id="@+id/sapphireBank"
-        android:layout_width="@dimen/large_icon_size"
-        android:layout_height="@dimen/large_icon_size"
+        android:layout_width="@dimen/large_token_size"
+        android:layout_height="@dimen/large_token_size"
         style="@style/border_text"
         android:textSize="@dimen/large_text"
         android:text="0"
-        android:background="@drawable/sapphire_circle"/>
-
-    <!--drew.harker.splendorapp.view.Coin
-        android:layout_width="@dimen/large_icon_size"
-        android:layout_height="@dimen/large_icon_size"
+        android:background="@drawable/circle"
         custom:coin_color="@color/sapphire"
-        custom:always_visible="true"/-->
+        custom:always_visible="true"
+        custom:selectable="true"/>
 
     <View
-        android:layout_width="@dimen/large_icon_padding"
-        android:layout_height="@dimen/large_icon_size"/>
+        android:layout_width="@dimen/large_token_padding"
+        android:layout_height="@dimen/large_token_size"/>
 
-    <TextView
+    <drew.harker.splendorapp.view.ValueTokenView
         android:id="@+id/emeraldBank"
-        android:layout_width="@dimen/large_icon_size"
-        android:layout_height="@dimen/large_icon_size"
+        android:layout_width="@dimen/large_token_size"
+        android:layout_height="@dimen/large_token_size"
         style="@style/border_text"
         android:textSize="@dimen/large_text"
         android:text="0"
-        android:background="@drawable/emerald_circle"/>
+        android:background="@drawable/circle"
+        custom:coin_color="@color/emerald"
+        custom:always_visible="true"
+        custom:selectable="true"/>
 
     <View
-        android:layout_width="@dimen/large_icon_padding"
-        android:layout_height="@dimen/large_icon_size"/>
+        android:layout_width="@dimen/large_token_padding"
+        android:layout_height="@dimen/large_token_size"/>
 
-    <TextView
+    <drew.harker.splendorapp.view.ValueTokenView
         android:id="@+id/rubyBank"
-        android:layout_width="@dimen/large_icon_size"
-        android:layout_height="@dimen/large_icon_size"
+        android:layout_width="@dimen/large_token_size"
+        android:layout_height="@dimen/large_token_size"
         style="@style/border_text"
         android:textSize="@dimen/large_text"
         android:text="0"
-        android:background="@drawable/ruby_circle"/>
+        android:background="@drawable/circle"
+        custom:coin_color="@color/ruby"
+        custom:always_visible="true"
+        custom:selectable="true"/>
 
     <View
-        android:layout_width="@dimen/large_icon_padding"
-        android:layout_height="@dimen/large_icon_size"/>
+        android:layout_width="@dimen/large_token_padding"
+        android:layout_height="@dimen/large_token_size"/>
 
-    <TextView
+    <drew.harker.splendorapp.view.ValueTokenView
         android:id="@+id/onyxBank"
-        android:layout_width="@dimen/large_icon_size"
-        android:layout_height="@dimen/large_icon_size"
+        android:layout_width="@dimen/large_token_size"
+        android:layout_height="@dimen/large_token_size"
         style="@style/border_text"
         android:textSize="@dimen/large_text"
         android:text="0"
-        android:background="@drawable/onyx_circle"/>
+        android:background="@drawable/circle"
+        custom:coin_color="@color/onyx"
+        custom:always_visible="true"
+        custom:selectable="true"/>
 
     <View
-        android:layout_width="@dimen/large_icon_padding"
-        android:layout_height="@dimen/large_icon_size"/>
+        android:layout_width="@dimen/large_token_padding"
+        android:layout_height="@dimen/large_token_size"/>
 
-    <TextView
+    <drew.harker.splendorapp.view.ValueTokenView
         android:id="@+id/goldBank"
-        android:layout_width="@dimen/large_icon_size"
-        android:layout_height="@dimen/large_icon_size"
+        android:layout_width="@dimen/large_token_size"
+        android:layout_height="@dimen/large_token_size"
         style="@style/border_text"
         android:textSize="@dimen/large_text"
         android:text="0"
-        android:background="@drawable/gold_circle"/>
+        android:background="@drawable/circle"
+        custom:coin_color="@color/gold"
+        custom:always_visible="true"
+        custom:selectable="true"/>
 
 </LinearLayout>
