--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="@dimen/card_width"
-              android:layout_height="@dimen/card_height"
-              android:padding="5dp"
-              android:layout_margin="@dimen/card_margin"
-              android:background="@drawable/card">
+                xmlns:custom="http://schemas.android.com/apk/res-auto"
+                android:orientation="vertical"
+                android:layout_width="@dimen/card_width"
+                android:layout_height="@dimen/card_height"
+                android:padding="5dp"
+                android:layout_margin="@dimen/card_margin"
+                android:background="@drawable/card">
 
-    <View
+    <drew.harker.splendorapp.view.ValueTokenView
         android:id="@+id/source"
-        android:layout_width="@dimen/small_icon_size"
-        android:layout_height="@dimen/small_icon_size"
+        android:layout_width="@dimen/small_token_size"
+        android:layout_height="@dimen/small_token_size"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:background="@drawable/sapphire_circle"/>
+        android:background="@drawable/circle"
+        android:text=""
+        custom:coin_color="@color/sapphire"
+        custom:always_visible="true"
+        custom:selectable="false"/>
 
     <TextView
         android:id="@+id/points"
@@ -33,51 +38,65 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/diamondCost"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/diamond_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/diamond"
+            custom:always_visible="false"
+            custom:selectable="false"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/sapphireCost"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:visibility="gone"
-            android:background="@drawable/sapphire_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/sapphire"
+            custom:always_visible="false"
+            custom:selectable="false"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/emeraldCost"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/emerald_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/emerald"
+            custom:always_visible="false"
+            custom:selectable="false"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/rubyCost"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/ruby_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/ruby"
+            custom:always_visible="false"
+            custom:selectable="false"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/onyxCost"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/onyx_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/onyx"
+            custom:always_visible="false"
+            custom:selectable="false"/>
 
     </LinearLayout>
 
