--- a/app/src/main/res/layout/noble.xml
+++ b/app/src/main/res/layout/noble.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="@dimen/noble_size"
-              android:layout_height="@dimen/noble_size"
-              android:padding="5dp"
-              android:layout_margin="@dimen/card_margin"
-              android:background="@drawable/card"
-              android:gravity="center_horizontal">
+                android:layout_width="@dimen/noble_size"
+                android:layout_height="@dimen/noble_size"
+                xmlns:custom="http://schemas.android.com/apk/res-auto"
+                android:padding="5dp"
+                android:layout_margin="@dimen/card_margin"
+                android:background="@drawable/card"
+                android:gravity="center_horizontal">
+    
     <TextView
         android:id="@+id/points"
         android:paddingRight="@dimen/card_margin"
@@ -24,37 +26,81 @@
         android:orientation="vertical"
         android:text="0">
 
-        <TextView
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+        <drew.harker.splendorapp.view.ValueTokenView
+            android:id="@+id/diamondCost"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
-            android:background="@drawable/sapphire_square"
-            android:text="0"/>
+            android:text="0"
+            android:background="@drawable/square"
+            custom:coin_color="@color/diamond"
+            custom:always_visible="false"
+            custom:selectable="false"/>
 
         <View
             android:layout_width="@dimen/card_margin"
             android:layout_height="@dimen/card_margin"/>
 
-        <TextView
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+        <drew.harker.splendorapp.view.ValueTokenView
+            android:id="@+id/sapphireCost"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
-            android:background="@drawable/emerald_square"
-            android:text="0"/>
+            android:text="0"
+            android:background="@drawable/square"
+            custom:coin_color="@color/sapphire"
+            custom:always_visible="false"
+            custom:selectable="false"/>
 
         <View
             android:layout_width="@dimen/card_margin"
             android:layout_height="@dimen/card_margin"/>
 
-        <TextView
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+        <drew.harker.splendorapp.view.ValueTokenView
+            android:id="@+id/emeraldCost"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
-            android:background="@drawable/onyx_square"
-            android:text="0"/>
+            android:text="0"
+            android:background="@drawable/square"
+            custom:coin_color="@color/emerald"
+            custom:always_visible="false"
+            custom:selectable="false"/>
+
+        <View
+            android:layout_width="@dimen/card_margin"
+            android:layout_height="@dimen/card_margin"/>
+
+        <drew.harker.splendorapp.view.ValueTokenView
+            android:id="@+id/rubyCost"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
+            android:textSize="@dimen/small_text"
+            style="@style/border_text"
+            android:text="0"
+            android:background="@drawable/square"
+            custom:coin_color="@color/ruby"
+            custom:always_visible="false"
+            custom:selectable="false"/>
+
+        <View
+            android:layout_width="@dimen/card_margin"
+            android:layout_height="@dimen/card_margin"/>
+
+        <drew.harker.splendorapp.view.ValueTokenView
+            android:id="@+id/onyxCost"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
+            android:textSize="@dimen/small_text"
+            style="@style/border_text"
+            android:text="0"
+            android:background="@drawable/square"
+            custom:coin_color="@color/onyx"
+            custom:always_visible="false"
+            custom:selectable="false"/>
 
     </LinearLayout>
 
