--- a/app/src/main/res/layout/player_bank.xml
+++ b/app/src/main/res/layout/player_bank.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:custom="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -23,87 +24,105 @@
         android:padding="15dp"
         android:layout_gravity="center_horizontal">
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/points"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/gold_square"/>
+            android:background="@drawable/square"
+            custom:coin_color="@color/gold"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/diamondCardCount"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/diamond_square"/>
+            android:background="@drawable/square"
+            custom:coin_color="@color/diamond"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/sapphireCardCount"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/sapphire_square"/>
+            android:background="@drawable/square"
+            custom:coin_color="@color/sapphire"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/emeraldCardCount"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/emerald_square"/>
+            android:background="@drawable/square"
+            custom:coin_color="@color/emerald"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/rubyCardCount"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/ruby_square"/>
+            android:background="@drawable/square"
+            custom:coin_color="@color/ruby"
+            custom:always_visible="true"
+            custom:selectable="false" />
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/onyxCardCount"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/onyx_square"/>
+            android:background="@drawable/square"
+            custom:coin_color="@color/onyx"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
     <!--/LinearLayout>
 
@@ -115,79 +134,97 @@
         android:layout_gravity="center_horizontal"-->
     <!-- Coin counts -->
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/diamondBank"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/diamond_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/diamond"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/sapphireBank"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/sapphire_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/sapphire"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/emeraldBank"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/emerald_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/emerald"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/rubyBank"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/ruby_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/ruby"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/onyxBank"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/onyx_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/onyx"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
         <View
-            android:layout_width="@dimen/small_icon_padding"
-            android:layout_height="@dimen/small_icon_size"/>
+            android:layout_width="@dimen/small_token_padding"
+            android:layout_height="@dimen/small_token_size"/>
 
-        <TextView
+        <drew.harker.splendorapp.view.ValueTokenView
             android:id="@+id/goldBank"
-            android:layout_width="@dimen/small_icon_size"
-            android:layout_height="@dimen/small_icon_size"
+            android:layout_width="@dimen/small_token_size"
+            android:layout_height="@dimen/small_token_size"
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
-            android:background="@drawable/gold_circle"/>
+            android:background="@drawable/circle"
+            custom:coin_color="@color/gold"
+            custom:always_visible="true"
+            custom:selectable="false"/>
 
     </LinearLayout>
 
