--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,12 +12,12 @@
     <dimen name="card_margin">3dp</dimen>
     <dimen name="noble_size">100dp</dimen>
 
-    <!-- Icon sizes -->
-    <dimen name="small_icon_padding">5dp</dimen>
-    <dimen name="large_icon_padding">10dp</dimen>
+    <!-- token sizes -->
+    <dimen name="small_token_padding">5dp</dimen>
+    <dimen name="large_token_padding">10dp</dimen>
 
-    <dimen name="small_icon_size">25dp</dimen>
-    <dimen name="large_icon_size">75dp</dimen>
+    <dimen name="small_token_size">25dp</dimen>
+    <dimen name="large_token_size">75dp</dimen>
 
     <dimen name="small_text">15dp</dimen>
     <dimen name="large_text">25dp</dimen>
