--- a/app/src/main/res/layout/activity_game_view.xml
+++ b/app/src/main/res/layout/activity_game_view.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical"
         android:gravity="center_horizontal|center_vertical">
 
-        <!-- Nobles List (3 to 5)-->
+        <!-- Nobles List (size 3 to 5)-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,6 +41,8 @@
         <!-- Users Cards and Coins and Points -->
         <include layout="@layout/player_bank"
          android:id="@+id/player_bank"/>
+
+        <!-- TODO: build a way to look your reserved cards and at the other players stuff -->
 
     </LinearLayout>
 
