Adjusted the default values to look nice on a small tablet

--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -58,6 +58,7 @@
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
+            android:visibility="gone"
             android:background="@drawable/circle"
             custom:coin_color="@color/sapphire"
             custom:always_visible="false"
