--- a/app/src/main/res/layout/noble.xml
+++ b/app/src/main/res/layout/noble.xml
@@ -50,6 +50,7 @@
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
+            android:visibility="gone"
             android:background="@drawable/square"
             custom:coin_color="@color/sapphire"
             custom:always_visible="false"
@@ -82,6 +83,7 @@
             android:textSize="@dimen/small_text"
             style="@style/border_text"
             android:text="0"
+            android:visibility="gone"
             android:background="@drawable/square"
             custom:coin_color="@color/ruby"
             custom:always_visible="false"
