Beginning the link between the model and view. Some refactoring is still necessary.

--- a/app/src/main/res/layout/card_back.xml
+++ b/app/src/main/res/layout/card_back.xml
@@ -8,6 +8,7 @@
                 android:background="@drawable/card">
 
     <TextView
+        android:id="@+id/card_back_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical|center_horizontal"
