--- a/app/src/main/res/layout/player_bank.xml
+++ b/app/src/main/res/layout/player_bank.xml
@@ -1,220 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:custom="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:custom="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/black"/>
+    <!-- TODO: Change the icons to be something more intuitive -->
+    <ImageView
+        android:id="@+id/viewPlayersButton"
+        android:layout_width="@dimen/large_token_size"
+        android:layout_height="@dimen/large_token_size"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:visibility="invisible"
+        android:src="@android:drawable/ic_menu_search"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Player 0"
-        android:textSize="@dimen/xl_text"
-        android:layout_gravity="center_horizontal"/>
-
-    <!-- Card counts (All 5) -->
-    <LinearLayout android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:layout_gravity="center_horizontal">
-
-        <!-- TODO: find a more intuitive way to display points -->
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/points"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/square"
-            custom:coin_color="@color/gold"
-            custom:always_visible="true"
-            custom:selectable="false"/>
+    <LinearLayout android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
 
         <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/black"/>
 
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/diamondCardCount"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/square"
-            custom:coin_color="@color/diamond"
-            custom:always_visible="true"
-            custom:selectable="false"/>
+        <TextView
+            android:id="@+id/player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/xl_text"
+            android:layout_gravity="center_horizontal"/>
 
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
+        <!-- Card counts (All 5) -->
+        <LinearLayout android:orientation="horizontal"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:padding="15dp"
+                      android:layout_gravity="center_horizontal">
 
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/sapphireCardCount"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/square"
-            custom:coin_color="@color/sapphire"
-            custom:always_visible="true"
-            custom:selectable="false"/>
+            <!-- TODO: find a more intuitive way to display points -->
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/points"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/square"
+                custom:coin_color="@color/gold"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/diamondCardCount"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/square"
+                custom:coin_color="@color/diamond"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/emeraldCardCount"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/square"
-            custom:coin_color="@color/emerald"
-            custom:always_visible="true"
-            custom:selectable="false"/>
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/sapphireCardCount"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/square"
+                custom:coin_color="@color/sapphire"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/emeraldCardCount"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/square"
+                custom:coin_color="@color/emerald"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/rubyCardCount"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/square"
-            custom:coin_color="@color/ruby"
-            custom:always_visible="true"
-            custom:selectable="false" />
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/rubyCardCount"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/square"
+                custom:coin_color="@color/ruby"
+                custom:always_visible="true"
+                custom:selectable="false" />
 
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/onyxCardCount"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/square"
+                custom:coin_color="@color/onyx"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/onyxCardCount"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/square"
-            custom:coin_color="@color/onyx"
-            custom:always_visible="true"
-            custom:selectable="false"/>
+            <View
+                android:layout_width="@dimen/small_token_padding"
+                android:layout_height="@dimen/small_token_size"/>
 
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
+            </LinearLayout>
 
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="15dp"
+                android:layout_gravity="center_horizontal">
 
-    <!--/LinearLayout>
+            <!-- Coin counts (All 6) -->
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"-->
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/diamondBank"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/circle"
+                custom:coin_color="@color/diamond"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <!-- Coin counts (All 6) -->
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/sapphireBank"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/circle"
+                custom:coin_color="@color/sapphire"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/diamondBank"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/circle"
-            custom:coin_color="@color/diamond"
-            custom:always_visible="true"
-            custom:selectable="false"/>
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/emeraldBank"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/circle"
+                custom:coin_color="@color/emerald"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/rubyBank"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/circle"
+                custom:coin_color="@color/ruby"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/sapphireBank"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/circle"
-            custom:coin_color="@color/sapphire"
-            custom:always_visible="true"
-            custom:selectable="false"/>
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/onyxBank"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/circle"
+                custom:coin_color="@color/onyx"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
+            <drew.harker.splendorapp.view.ValueTokenView
+                android:id="@+id/goldBank"
+                android:layout_width="@dimen/small_token_size"
+                android:layout_height="@dimen/small_token_size"
+                android:layout_marginLeft="@dimen/small_token_padding"
+                android:textSize="@dimen/small_text"
+                style="@style/border_text"
+                android:background="@drawable/circle"
+                custom:coin_color="@color/gold"
+                custom:always_visible="true"
+                custom:selectable="false"/>
 
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/emeraldBank"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/circle"
-            custom:coin_color="@color/emerald"
-            custom:always_visible="true"
-            custom:selectable="false"/>
-
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
-
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/rubyBank"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/circle"
-            custom:coin_color="@color/ruby"
-            custom:always_visible="true"
-            custom:selectable="false"/>
-
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
-
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/onyxBank"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/circle"
-            custom:coin_color="@color/onyx"
-            custom:always_visible="true"
-            custom:selectable="false"/>
-
-        <View
-            android:layout_width="@dimen/small_token_padding"
-            android:layout_height="@dimen/small_token_size"/>
-
-        <drew.harker.splendorapp.view.ValueTokenView
-            android:id="@+id/goldBank"
-            android:layout_width="@dimen/small_token_size"
-            android:layout_height="@dimen/small_token_size"
-            android:textSize="@dimen/small_text"
-            style="@style/border_text"
-            android:background="@drawable/circle"
-            custom:coin_color="@color/gold"
-            custom:always_visible="true"
-            custom:selectable="false"/>
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/viewReserveButton"
+        android:layout_width="@dimen/large_token_size"
+        android:layout_height="@dimen/large_token_size"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@android:drawable/ic_menu_gallery"/>
+
+</RelativeLayout>
+
